# api/swagger.json
@@ -33,7 +33,7 @@
       "description": "工程（当前完全是初始版本，传入参数以及返回数据内容孑需修改,且流程实例状态更新没有添加此类）"
     },
     {
-      "name": "testplan",
+      "name": "testCase",
       "description": "测试计划（同工程，而且当前没有按照用户查询的功能，孑需改进，流程实例方面同样没有更新）"
     },
     {
@@ -41,7 +41,7 @@
       "description": "测试报告（同测试计划）"
     },
     {
-      "name": "testResult",
+      "name": "testRecord",
       "description": "测试结果（同测试计划）"
     }
   ],
@@ -304,6 +304,20 @@
             "description": "委托id",
             "type": "string",
             "required": true
+          },
+          {
+            "name": "username",
+            "in": "query",
+            "description": "用户名",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "clientDigest",
+            "in": "query",
+            "description": "摘要。登录时由后台传入，用以身份验证",
+            "type": "string",
+            "required": true
           }
         ],
         "responses": {
@@ -462,7 +476,7 @@
           "contract"
         ],
         "summary": "添加合同",
-        "description": "向数据库中添加合同，成功时返回合同的具体信息以及一个success状态",
+        "description": "向数据库中添加合同，添加时要给定一个id，是所在project的id（project的id是在创建project时前端传入的对应绑定consign的一个id），成功时返回合同的具体信息以及一个success状态",
         "operationId": "addContract",
         "consumes": [
           "application/x-www-form-urlencoded"
@@ -488,7 +502,7 @@
           {
             "in": "formData",
             "name": "params",
-            "description": "合同的具体内容. JSON格式\n```\n{\n  \"contractBody\": \"content\"\n}\n```\n",
+            "description": "合同的具体内容. JSON格式\n```\n{\n  \"id\":\"xxx\"\n  \"contractBody\": \"content\"\n}\n```\n",
             "type": "string",
             "required": true
           }
@@ -646,7 +660,7 @@
           "project"
         ],
         "summary": "查询工程",
-        "description": "用户为普通客户时，返回当前该客户的所有合同，如果是工作人员返回所有工程",
+        "description": "用户为普通客户时，返回当前该客户的所有工程，如果是工作人员返回所有工程",
         "operationId": "queryProjects",
         "consumes": [
           "application/x-www-form-urlencoded"
@@ -684,7 +698,7 @@
           "project"
         ],
         "summary": "添加工程",
-        "description": "向数据库中添加工程，但是添加的内容还没有确定，成功时返回合同的具体信息以及一个success状态",
+        "description": "向数据库中添加工程，添加时需要前端提供去绑定的consign的id，成功时返回合同的具体信息以及一个success状态",
         "operationId": "addProject",
         "consumes": [
           "application/x-www-form-urlencoded"
@@ -710,7 +724,7 @@
           {
             "in": "formData",
             "name": "params",
-            "description": "合同的具体内容. JSON格式\n```\n{\n  \"xxx\": \"xxx\"\n}\n```\n",
+            "description": "合同的具体内容. JSON格式\n```\n{\n  \"id\":\"xxx\"\n  \"xxx\": \"xxx\"\n}\n```\n",
             "type": "string",
             "required": true
           }
@@ -862,14 +876,14 @@
         }
       }
     },
-    "/services/v1/testplan": {
+    "/services/v1/testCase": {
       "get": {
         "tags": [
-          "testplan"
+          "testCase"
         ],
         "summary": "查询测试计划",
-        "description": "尚未实现成功，用户为普通客户时，返回当前该客户的所有合同，如果是工作人员返回所有工程",
-        "operationId": "queryTestPlans",
+        "description": "根据当前用户身份选择返回当前客户的testCase或者是全部testCase",
+        "operationId": "queryTestCases",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
@@ -903,11 +917,11 @@
       },
       "post": {
         "tags": [
-          "testplan"
+          "testCase"
         ],
         "summary": "添加测试计划",
-        "description": "向数据库中添加测试计划，但是添加的内容还没有确定，添加到的位置没有确定，成功时返回测试计划的具体信息以及一个success状态",
-        "operationId": "addTestPlan",
+        "description": "向数据库中添加测试计划，除了内容testcase还要前端提供project的id，成功时返回测试计划的具体信息以及一个success状态",
+        "operationId": "addTestCase",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
@@ -932,14 +946,14 @@
           {
             "in": "formData",
             "name": "params",
-            "description": "测试计划的具体内容. JSON格式\n```\n{\n  \"plan\": \"xxx\"\n}\n```\n",
+            "description": "测试计划的具体内容. JSON格式\n```\n{\n  \"id\":\"xxx\"\n  \"testcase\": \"xxx\"\n}\n```\n",
             "type": "string",
             "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "成功添加测试计划时的样例response body\n```\n{\n  \"data\": {\n    \"createdUserId\": \"2\",\n    \"createdTime\": \"2018-06-03 20:16:31\",\n    \"id\": \"49e9b994-064c-47f9-9a2e-f02260ed9d11\",\n    \"plan\": \"I love taylorswift\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
+            "description": "成功添加测试计划时的样例response body\n```\n{\n  \"data\": {\n    \"createdUserId\": \"2\",\n    \"createdTime\": \"2018-06-03 20:16:31\",\n    \"id\": \"49e9b994-064c-47f9-9a2e-f02260ed9d11\",\n    \"testcase\": \"I love taylorswift\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
           },
           "405": {
             "description": "Invalid input"
@@ -948,11 +962,11 @@
       },
       "put": {
         "tags": [
-          "testplan"
+          "testCase"
         ],
         "summary": "修改测试计划",
         "description": "修改已有的测试计划，参数中需要包含测试计划的id",
-        "operationId": "editTestPlan",
+        "operationId": "editTestCase",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
@@ -984,7 +998,7 @@
         ],
         "responses": {
           "200": {
-            "description": "修改成功时的样例response body\n```\n{\n  \"data\": {\n    \"createdUserId\": \"2\",\n    \"alteredTime\": \"2018-06-03 20:17:52\",\n    \"createdTime\": \"2018-06-03 20:16:31\",\n    \"alteredUserId\": \"2\",\n    \"id\": \"49e9b994-064c-47f9-9a2e-f02260ed9d11\",\n    \"plan\": \"love shawnmendes\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
+            "description": "修改成功时的样例response body\n```\n{\n  \"data\": {\n    \"createdUserId\": \"2\",\n    \"alteredTime\": \"2018-06-03 20:17:52\",\n    \"createdTime\": \"2018-06-03 20:16:31\",\n    \"alteredUserId\": \"2\",\n    \"id\": \"49e9b994-064c-47f9-9a2e-f02260ed9d11\",\n    \"testcase\": \"love shawnmendes\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
           },
           "405": {
             "description": "Invalid input"
@@ -993,11 +1007,11 @@
       },
       "delete": {
         "tags": [
-          "testplan"
+          "testCase"
         ],
         "summary": "删除测试计划",
         "description": "删除一个测试计划，需要提供具体id",
-        "operationId": "deleteTestPlan",
+        "operationId": "deleteTestCase",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
@@ -1037,10 +1051,10 @@
         }
       }
     },
-    "/services/v1/testplan/{id}": {
+    "/services/v1/testCase/{id}": {
       "get": {
         "tags": [
-          "testplan"
+          "testCase"
         ],
         "summary": "根据id查询测试计划",
         "description": "根据请求中的id查询对应测试计划",
@@ -1076,7 +1090,7 @@
         ],
         "responses": {
           "200": {
-            "description": "成功查询测试计划. data内包含JsonArray格式的内容\n```\n{\n  \"data\": {\n    \"createdUserId\": \"2\",\n    \"createdTime\": \"2018-06-03 20:19:30\",\n    \"id\": \"ad402346-a514-4e0b-9fec-6ac13f0a2a98\",\n    \"plan\": \"I love taylorswift\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
+            "description": "成功查询测试计划. data内包含JsonArray格式的内容\n```\n{\n  \"data\": {\n    \"createdUserId\": \"2\",\n    \"createdTime\": \"2018-06-03 20:19:30\",\n    \"id\": \"ad402346-a514-4e0b-9fec-6ac13f0a2a98\",\n    \"testcase\": \"I love taylorswift\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
           },
           "405": {
             "description": "Invalid input"
@@ -1128,7 +1142,7 @@
           "testReport"
         ],
         "summary": "添加测试报告",
-        "description": "向数据库中添加测试报告，但是添加的内容还没有确定，添加到的位置没有确定，成功时返回测试计划的具体信息以及一个success状态",
+        "description": "向数据库中添加测试报告，除了内容report还要提供绑定project的id，成功时返回测试计划的具体信息以及一个success状态",
         "operationId": "addTestReport",
         "consumes": [
           "application/x-www-form-urlencoded"
@@ -1154,7 +1168,7 @@
           {
             "in": "formData",
             "name": "params",
-            "description": "测试计划的具体内容. JSON格式\n```\n{\n  \"report\": \"xxx\"\n}\n```\n",
+            "description": "测试计划的具体内容. JSON格式\n```\n{\n  \"id\":\"xxx\"\n  \"report\": \"xxx\"\n}\n```\n",
             "type": "string",
             "required": true
           }
@@ -1306,10 +1320,10 @@
         }
       }
     },
-    "/services/v1/testResult": {
+    "/services/v1/testRecord": {
       "get": {
         "tags": [
-          "testResult"
+          "testRecord"
         ],
         "summary": "查询测试结果",
         "description": "尚未实现成功（未绑定project）",
@@ -1347,10 +1361,10 @@
       },
       "post": {
         "tags": [
-          "testResult"
+          "testRecord"
         ],
         "summary": "添加测试结果",
-        "description": "向数据库中添加测试结果，但是添加的内容还没有确定，添加到的位置没有确定（project），成功时返回测试计划的具体信息以及一个success状态",
+        "description": "向数据库中添加测试结果，除了一个record还要有对应project的id，成功时返回测试计划的具体信息以及一个success状态",
         "operationId": "addTestResult",
         "consumes": [
           "application/x-www-form-urlencoded"
@@ -1376,14 +1390,14 @@
           {
             "in": "formData",
             "name": "params",
-            "description": "测试计划的具体内容. JSON格式\n```\n{\n  \"result\": \"xxx\"\n}\n```\n",
+            "description": "测试计划的具体内容. JSON格式\n```\n{\n  \"id\":\"xxx\"\n  \"record\": \"xxx\"\n}\n```\n",
             "type": "string",
             "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "成功添加测试结果时的样例response body\n```\n{\n  \"data\": {\n    \"result\": \"end game\",\n    \"createdUserId\": \"2\",\n    \"createdTime\": \"2018-06-08 14:19:55\",\n    \"id\": \"a6ae9603-ca4a-4fb0-bc7a-341313eacbe3\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
+            "description": "成功添加测试结果时的样例response body\n```\n{\n  \"data\": {\n    \"record\": \"end game\",\n    \"createdUserId\": \"2\",\n    \"createdTime\": \"2018-06-08 14:19:55\",\n    \"id\": \"a6ae9603-ca4a-4fb0-bc7a-341313eacbe3\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
           },
           "405": {
             "description": "Invalid input"
@@ -1392,7 +1406,7 @@
       },
       "put": {
         "tags": [
-          "testResult"
+          "testRecord"
         ],
         "summary": "修改测试结果",
         "description": "修改已有的测试结果，参数中需要包含测试结果的id",
@@ -1421,14 +1435,14 @@
           {
             "in": "formData",
             "name": "params",
-            "description": "具体内容. JSON格式. 需要指明测试计划的ID\n```\n{\n  \"id\": \n  \"result\":\n}\n```\n",
+            "description": "具体内容. JSON格式. 需要指明测试计划的ID\n```\n{\n  \"id\": \n  \"record\":\n}\n```\n",
             "type": "string",
             "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "修改成功时的样例response body\n```\n{\n  \"data\": {\n    \"result\": \"gorgeous\",\n    \"createdUserId\": \"2\",\n    \"alteredTime\": \"2018-06-08 14:21:30\",\n    \"createdTime\": \"2018-06-08 14:19:55\",\n    \"alteredUserId\": \"2\",\n    \"id\": \"a6ae9603-ca4a-4fb0-bc7a-341313eacbe3\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
+            "description": "修改成功时的样例response body\n```\n{\n  \"data\": {\n    \"record\": \"gorgeous\",\n    \"createdUserId\": \"2\",\n    \"alteredTime\": \"2018-06-08 14:21:30\",\n    \"createdTime\": \"2018-06-08 14:19:55\",\n    \"alteredUserId\": \"2\",\n    \"id\": \"a6ae9603-ca4a-4fb0-bc7a-341313eacbe3\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
           },
           "405": {
             "description": "Invalid input"
@@ -1437,11 +1451,11 @@
       },
       "delete": {
         "tags": [
-          "testResult"
+          "testRecord"
         ],
         "summary": "删除测试结果",
         "description": "删除一个测试结果，需要提供具体id",
-        "operationId": "deleteTestResult",
+        "operationId": "deleteTestRecord",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
@@ -1481,10 +1495,10 @@
         }
       }
     },
-    "/services/v1/testResult/{id}": {
+    "/services/v1/testRecord/{id}": {
       "get": {
         "tags": [
-          "testResult"
+          "testRecord"
         ],
         "summary": "根据id查询测试结果",
         "description": "根据请求中的id查询对应测试结果",
@@ -1520,7 +1534,7 @@
         ],
         "responses": {
           "200": {
-            "description": "成功查询测试结果. data内包含JsonArray格式的内容\n```\n{\n  \"data\": {\n    \"result\": \"gorgeous\",\n    \"createdUserId\": \"2\",\n    \"alteredTime\": \"2018-06-08 14:21:30\",\n    \"createdTime\": \"2018-06-08 14:19:55\",\n    \"alteredUserId\": \"2\",\n    \"id\": \"a6ae9603-ca4a-4fb0-bc7a-341313eacbe3\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
+            "description": "成功查询测试结果. data内包含JsonArray格式的内容\n```\n{\n  \"data\": {\n    \"record\": \"gorgeous\",\n    \"createdUserId\": \"2\",\n    \"alteredTime\": \"2018-06-08 14:21:30\",\n    \"createdTime\": \"2018-06-08 14:19:55\",\n    \"alteredUserId\": \"2\",\n    \"id\": \"a6ae9603-ca4a-4fb0-bc7a-341313eacbe3\"\n  },\n  \"status\": \"SUCCESS\"\n}\n```\n"
           },
           "405": {
             "description": "Invalid input"
